<resources>
    <string name="app_name">Virtual Hosts</string>
    <string name="action_settings">Settings</string>
    <string name="update_button">update</string>
    <string name="update_hosts">select ip update hosts</string>
    <string name="clear_hosts">clear hosts</string>
    <string name="load_hosts">loads hosts</string>
    <string name="backup_hosts">backup hosts</string>
    <string name="start_vpn">start vpn</string>
    <string name="stop_vpn">stop vpn</string>
    <string name="re_select_hosts">Re-select Hosts File</string>
    <string name="select_hosts">Select Hosts File</string>
    <string name="info">supports wildcard DNS records,Example:\nabc.com\nm.abc.com\nweb.abc.com\n=>.abc.com</string>
    <string name="dialog_title">
        <font color="@color/primary_text">Please Select Hosts File</font>
    </string>
    <string name="dialog_message">
        <font color="@color/secondary_text">The Hosts File unselected or been deleted</font>
    </string>
    <string name="dialog_confirm">confirm</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dns_server">8.8.8.8</string>
    <string name="file_select_error">Error ! System File Browser Not Find, Will Use Url Mode</string>
    <string name="permission_error">Error ! No Permission</string>
    <string name="fab_label_setting">Setting</string>
    <string name="fab_label_boot">On Startup</string>
    <string name="fab_label_donation">Donate</string>
    <string name="welcome">Your support is the greatest impetus for us.\nYou can support us through the following
        ways.
    </string>
    <string name="rate">Rate on the Store</string>
    <string name="alipay">Donate with Alipay</string>
    <string name="wechat">Donate with WeChat</string>
    <string name="paypal">Donate with Paypal</string>
    <string name="googleplay">Donate with Google Play</string>
    <string name="googleplay2">Donate $2 with Google Play</string>
    <string name="googleplay4">Donate $4 with Google Play</string>
    <string name="googleplay6">Donate $6 with Google Play</string>
    <string name="googleplay8">Donate $8 with Google Play</string>
    <string name="googleplay10">Donate $10 with Google Play</string>
    <string name="bitcoin">Donate with Bitcoin</string>
    <string name="tip_bitcoin">bitcoin address has copy to the clipboard</string>
    <string name="radio_local">from local</string>
    <string name="radio_net">from internet</string>
    <string name="url_error">URL input is incorrect</string>
    <string name="dns4_error">DNS input is incorrect</string>
    <string name="down_success">Download Success Get %d Host Records</string>
    <string name="down_error">Download Failed</string>
    <string name="runing_notice">Virtual Hosts Is Running</string>

    <string name="pref_ps_set_hosts_url">set net hosts url</string>
    <string name="pref_ps_set_cus_dns">set custom dns</string>

    <string name="title_pref_remote_hosts">remote hosts url</string>
    <string name="pref_remote_hosts">remote hosts url</string>
    <string name="pref_is_net">use net hosts</string>
    <string name="pref_dns">custom dns</string>
    <string name="pref_dns_title">use custom dns</string>
    <string name="download_alert">Downloading File...</string>

    <string name="no_net_record">warning! net hosts file no dns record, please check</string>
    <string name="no_local_record">warning! local hosts file no dns record, please check</string>

</resources>
