<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        tools:context="com.github.xfalcon.vhosts.VhostsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="128dp"
            android:layout_height="256dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:id="@+id/constraintLayout">
        <com.suke.widget.SwitchButton
                android:id="@+id/button_start_vpn"
                android:layout_width="256dp"
                android:layout_height="128dp"
                android:text="@string/start_vpn"
                android:rotation="-90"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
            android:id="@+id/button_select_hosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/re_select_hosts"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>


    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="216dp"
            app:menu_labels_ellipsize="end"
            app:menu_labels_singleLine="true"
            app:menu_colorNormal="@color/primary"
            app:menu_colorPressed="@color/primary_dark"
            app:menu_colorRipple="@color/accent"
            app:layout_constraintBottom_toTopOf="@+id/button_select_hosts" android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="16dp">

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_boot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/fab_redNormal"
                app:fab_colorPressed="@color/fb_redPressed"
                android:src="@drawable/startup"
                app:fab_label="@string/fab_label_boot"/>

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_donation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/approve"
                app:fab_colorNormal="@color/fab_yellowNormal"
                app:fab_colorPressed="@color/fb_yellowPressed"
                app:fab_label="@string/fab_label_donation"/>
    </com.github.clans.fab.FloatingActionMenu>
</androidx.constraintlayout.widget.ConstraintLayout>