<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.github.xfalcon.vhosts.AdvanceActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:layout_editor_absoluteY="73dp"
        tools:layout_editor_absoluteX="8dp" android:id="@+id/scrollView2">


    <EditText
            android:layout_width="397dp"
            android:layout_height="60dp"
            android:inputType="textUri"
            android:text="URL"
            android:ems="10"
            android:id="@+id/url_edit_text"
            style="@android:style/Widget.EditText"
            android:textColor="@color/primary_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/dialog_confirm"
            android:layout_width="395dp"
            android:layout_height="60dp"
            android:id="@+id/confirm_button"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <RadioGroup android:layout_width="147dp" android:layout_height="109dp"
                android:orientation="vertical"
                android:id="@+id/ln_radio_group"
                android:visibility="visible"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/confirm_button" app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.541">
        <RadioButton
                android:text="@string/radio_local"
                android:layout_width="132dp"
                android:layout_height="42dp"
                tools:layout_editor_absoluteX="292dp" android:id="@+id/local_radio_button"
                tools:text="@string/radio_local"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/radioButton2"/>
        <RadioButton
                android:text="@string/radio_net"
                android:layout_width="134dp"
                android:layout_height="42dp" tools:layout_editor_absoluteY="403dp"
                tools:layout_editor_absoluteX="240dp" android:id="@+id/net_radio_button" tools:text="@string/radio_net"
        />
    </RadioGroup>
    <ImageButton
            android:layout_width="403dp"
            android:layout_height="62dp" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/down_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ln_radio_group" android:layout_marginBottom="40dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="68dp"
            android:layout_height="64dp"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/down_button"/>
</android.support.constraint.ConstraintLayout>
